Update Sieve.java